--- a/app/src/main/res/layout/row_user.xml
+++ b/app/src/main/res/layout/row_user.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:background="#C9E0E3"
-    android:translationY="45dp">
+    android:background="#C9E0E3">
 
     <TextView
         android:id="@+id/textViewMovieName"
